# aigov

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  README.md  SECURITY.md  action.yml  demo-results.json  main.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_scanner.md
.github/workflows/: aigov-ci.yml  publish.yml
docs/: github-actions-usage.md  scoring-model.md
examples/demo-project/: .aigov-policy.yaml  .env  .mcp.json  README.md
examples/demo-project/analytics/: fraud_detection.py
examples/demo-project/finops/: spend_analyzer.py
examples/demo-project/hiring/: resume_screener.py
examples/demo-project/infra/: ml_pipeline.tf
examples/demo-project/internal/: code_helper.py  code_review_helper.py
examples/demo-project/platform/: customer_chatbot.py
examples/demo-project/production/: .env.production
examples/demo-project/security/: threat_intel.py
examples/demo-project/support/: customer_chatbot.py
src/aigov/: version.py
src/aigov/cli/: baseline.py  check_risk.py  export.py  hooks.py  main.py
src/aigov/cli/commands/: baseline.py  classify.py  docs.py  export_cmd.py  gaps.py  graph.py  scan.py
src/aigov/core/: allowlist.py  baseline.py  custom_rules.py  docs_generator.py  engine.py  explainer.py  exporter.py  gaps.py  metadata.py  models.py  policy.py  reporter.py  sarif.py
src/aigov/core/graph/: __init__.py  engine.py  insights.py  relationships.py  renderer.py  schema.py
src/aigov/core/risk/: __init__.py  context.py  engine.py  scoring.py
src/aigov/frameworks/eu_ai_act/: __init__.py  annex_iii.yaml  classifier.py  prohibited.yaml  transparency.yaml
src/aigov/scanners/: base.py
src/aigov/scanners/cloud/: aws.py
src/aigov/scanners/code/: api_keys.py  (+1 more)
tests/fixtures/: fake_claude_desktop_config.json  fake_keys.env  fake_keys_app.py  fake_mcp.json  sample_ai_app.py
tests/fixtures/sample_infra/: Dockerfile  docker-compose.yml
tests/test_allowlist/: test_allowlist.py
tests/test_baseline/: test_baseline.py
tests/test_ci/: test_check_risk.py
tests/test_classifier/: test_eu_ai_act.py
tests/test_custom_rules/: test_custom_rules.py
tests/test_docs/: test_docs_generator.py
tests/test_engine/: test_strict_mode.py
tests/test_explainer/: test_explainer.py
tests/test_export/: test_export.py
tests/test_gaps/: test_gap_analyzer.py
tests/test_graph/: test_engine.py  test_insights.py  test_min_risk_score.py  test_relationships.py  test_renderer.py  test_schema.py
tests/test_hooks/: test_hooks.py
tests/test_integration/: test_full_scan.py  test_scan_and_classify.py
tests/test_models/: test_validation.py
tests/test_policy/: test_policy.py
tests/test_risk/: test_context.py  test_risk_engine.py  test_scoring.py
tests/test_risk/fixtures/: batch_processor.py  fastapi_users_app.py
tests/test_sarif/: test_sarif.py
tests/test_scanners/: test_api_keys.py  test_aws.py  test_docker.py  test_kubernetes.py  test_mcp_servers.py  test_python_imports.py  test_terraform.py
(+19 files in other folders)
